Correção na desabilitação de módulos